--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: ${{ secrets.EC2_PORT }}
           source: "."
-          target: "/home/ubuntu/app" # Replace with actual path on EC2
-          exclude: "node_modules"
+          target: ${{ secrets.EC2_APP_PATH }}
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -39,6 +38,6 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: ${{ secrets.EC2_PORT }}
           script: |
-            cd /home/ubuntu/app
+            cd ${{ secrets.EC2_APP_PATH }}
             npm install --production
             pm2 restart myapp || pm2 start app.js --name myapp
